More reliable .gitignore writing